--- a/styles.css
+++ b/styles.css
@@ -513,6 +513,8 @@ footer {
 
 #resume h2 {
   margin-bottom: 1.2rem;
+  margin-left: 0.5rem;
+  text-align: left;
 }
 
 .responsive-iframe-container {
